--- a/crates/bundler/Cargo.toml
+++ b/crates/bundler/Cargo.toml
@@ -14,3 +14,4 @@ serde = {version = "1.0.160", features = ["derive"]}
 bundler-types = {path = "../bundler-types"}
 thiserror = "1.0.40"
 ethers = "2.0.3"
+async-trait = "0.1.68"
