--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,3 +33,27 @@ jobs:
           override: true
       - name: Cargo test
         run: cargo test --verbose -- --test-threads=4
+
+    clippy:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: rust-toolchain
+        uses: actions-rs/toolchain@v1.0.6
+        with:
+          toolchain: stable
+          override: true
+      - name: Cargo Clippy
+        run: cargo clippy --all-targets --all-features -- -D warnings
+
+    fmt:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: rust-toolchain
+        uses: actions-rs/toolchain@v1.0.6
+        with:
+          toolchain: stable
+          override: true
+      - name: Cargo Fmt
+        run: cargo fmt --all -- --check
+
+
