--- a/crates/bundler/Cargo.toml
+++ b/crates/bundler/Cargo.toml
@@ -14,13 +14,16 @@ mempool = { path = "../mempool" }
 
 actix-web = "4.3.1"
 async-trait = "0.1.68"
+clap = {version = "4.3.4", features = ["derive"]}
 env_logger = "0.10.0"
 ethers = "2.0.3"
 eyre = "0.6.8"
 hex = "0.4.3"
+lazy_static = "1.4.0"
 log = "0.4.17"
 serde = { version = "1.0.160", features = ["derive"] }
 thiserror = "1.0.40"
+toml = "0.7.4"
 
 [dev-dependencies]
 test-context = "0.1.4"
